--- a/leisure/src/main/resources/application.properties
+++ b/leisure/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=@ITB123456
 
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
