--- a/leisure/src/main/resources/application.properties
+++ b/leisure/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.main.allow-circular-references=true
