--- a/leisure/src/main/resources/application.properties
+++ b/leisure/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=10MB
 
 spring.main.allow-circular-references=true
+
+image.path=Projeto/leisure/src/main/resources/Imagens/ImagensPerfil
