--- a/leisure/src/main/resources/application.properties
+++ b/leisure/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.servlet.multipart.max-file-size=10MB
 
 spring.main.allow-circular-references=true
 
-image.path=Projeto/leisure/src/main/resources/Imagens/ImagensPerfil
+#image.path=Projeto/leisure/src/main/resources/Imagens/ImagensPerfil
