Banco de dados local

--- a/leisure/src/main/resources/application.properties
+++ b/leisure/src/main/resources/application.properties
@@ -1,16 +1,5 @@
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://LEISURE.mssql.somee.com;databaseName=LEISURE;encrypt=true;trustServerCertificate=true
-spring.datasource.username=daansmyth_SQLLogin_1
-spring.datasource.password=@leisure123456
-
-spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.max-file-size=10MB
-
-spring.main.allow-circular-references=true
-
-#spring.main.allow-bean-definition-overriding=true
+spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
