--- a/leisure/pom.xml
+++ b/leisure/pom.xml
@@ -70,6 +70,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<scope>runtime</scope>
+		</dependency>
+
+
 		
 	</dependencies>
 
